Increase memory for forked tests in all samples
Some failures in travis builds